--- a/package.json
+++ b/package.json
@@ -8,5 +8,14 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "dotenv": "16.3.1",
+    "jsonwebtoken": "9.0.1",
+    "mysql2": "3.5.2",
+    "nodemon": "3.0.1"
+  }
 }
