--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --quiet ./src/app.js"
@@ -15,6 +15,7 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "cookie-parser": "1.4.6",
     "dotenv": "16.3.1",
     "jsonwebtoken": "9.0.1",
     "mysql2": "3.5.2",
